# botiquin_windsurf

./: .gitignore  INSTALL.md  README.md  check_columns.py  check_taxonomy.py  config.yaml  minimal_config.yaml  probe.py  pyproject.toml  run_batch.py
botiquin_fremap_v3/: .gitignore  README.md  main.py  requirements.txt
src/botiquin_windsurf/: __init__.py  batch.py  config.py  fuse.py  index_bm25.py  io_excel.py  normalize.py  router.py  search.py  taxonomy.py
tests/: __init__.py  conftest.py  test_batch.py  test_fuse.py  test_index_bm25.py  test_normalize.py  test_router.py  test_search.py  test_taxonomy.py
